# teller

./: Cargo.toml  README.md
.github/workflows/: release.yml
migrations/: 20231128193314_init.sql
teller/: Cargo.toml
teller/src/: lib.rs
teller/src/configuration/: mod.rs
teller/src/handlers/: backup.rs  config.rs  mod.rs  player.rs  snapshot.rs  world.rs
teller/src/handlers/config/: backup.rs  instance.rs  mod.rs
teller/src/handlers/search/: backups.rs  directories.rs  mod.rs  worlds.rs
teller/src/types/: backup.rs  config.rs  error.rs  mod.rs  player.rs  world.rs
teller/src/utils/: mod.rs  player_handler.rs
teller/src/world/: handler.rs  mod.rs
teller_desktop/: README.md  package.json  pnpm-lock.yaml  postcss.config.js  svelte.config.js  tailwind.config.js
teller_desktop/src/: app.html  app.postcss  stores.ts
teller_desktop/src-tauri/: Cargo.toml  tauri.conf.json
teller_desktop/src-tauri/icons/: icon.icns
teller_desktop/src-tauri/src/: lib.rs  main.rs
teller_desktop/src-tauri/src/backend/: backup_handler.rs  database_handler.rs  folder_handler.rs  mod.rs  world_handler.rs
teller_desktop/src-tauri/src/config/: mod.rs  structs.rs
teller_desktop/src-tauri/src/types/: events.rs
teller_desktop/src-tauri/src/utils/: mod.rs
teller_desktop/src/lib/: backup_list.svelte  backup_list_item.svelte  backup_modal.svelte  cron_selector.svelte  directories_list.svelte  directories_modal.svelte  inventory_viewer.svelte  local_vault_list.svelte  new_directories_list.svelte  snapshot_item.svelte  stores.ts  utils.ts  world_list.svelte  world_list_item.svelte
teller_desktop/src/lib/modals/: backup_modal.svelte  delete_modal.svelte  directories_modal.svelte  feedback_modal.svelte  local_vault_modal.svelte  restore_modal.svelte  settings_modal.svelte
teller_desktop/src/lib/stores/: caches.ts  feedback.ts  navigation.ts  settings.ts
teller_desktop/src/lib/types/: backups.ts  caches.ts  config.ts  events.ts  navigation.ts  worlds.ts
teller_desktop/src/routes/: +page.svelte
teller_desktop/src/routes/api/images/[imageName]/: +server.ts
teller_desktop/src/routes/config/: +layout.svelte
teller_desktop/src/routes/config/setDirs/: +page@config.svelte
teller_desktop/src/routes/local/: +layout.svelte  +page.svelte
teller_desktop/src/routes/local/vaults/: +page.svelte
teller_desktop/src/routes/local/vaults/[vaultName]/: +page.svelte
teller_desktop/src/routes/local/vaults/[vaultName]/[worldId]/: +page.svelte
teller_desktop/src/routes/local/vaults/[vaultName]/[worldId]/[snapshotId]/: +page.svelte
teller_desktop/src/routes/local/worlds/[categoryName]/[pathName]/: +page.svelte
teller_desktop/src/routes/local/worlds/[categoryName]/[pathName]/[worldId]/: +page.svelte
teller_desktop/src/routes/local/worlds/[categoryName]/[pathName]/[worldId]/player/[playerId]/: +page.svelte
teller_desktop/src/routes/local/worlds/[categoryName]/[worldId]/: +page.svelte
teller_desktop/src/routes/local/worlds/[categoryName]/[worldId]/player/[playerId]/: +page.svelte
teller_desktop/src/routes/local/worlds/[categoryName]/aaaa/[worldId]/: +page.svelte
teller_desktop/src/routes/local/worlds/[worldId]/: +page.svelte
teller_desktop/src/routes/local/worlds/[worldId]/player/[playerId]/: +page.svelte
