[package]
name = "teller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
commandblock = { version = "0.4.1", features = ["serde"] }
config = "0.13.3"
directories = "5.0.1"
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
uuid = { version = "1.4.1", features = ["v4"] }
