[package]
name = "teller"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
# commandblock = { version = "0.4.1", features = ["serde"] }
commandblock = { git = "https://github.com/Valink-Solutions/CommandBlock", features = ["serde"], branch = "add-bedrock-db-parsing" }
config = "0.13.3"
directories = "5.0.1"
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
serde_ini = "0.2.0"
# sqlx = { version = "0.7", features = ["json", "time", "sqlite", "runtime-tokio"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }

uuid = { version = "1.4.1", features = ["v4"] }

base64 = "0.21.2"
zip = "0.6.6"
anyhow = "1.0.75"
tracing-error = "0.2.0"
thiserror = "1.0.48"
url = "2.4.1"
regex = "1.9.5"
async_zip = { version = "0.0.15", features = ["full", "tokio"] }
async-recursion = "1.0.5"
