[package]
name = "teller_desktop"
version = "0.2.0"
description = "Teller is a Minecraft world backup tool, for use with the ChunkVault ecosystem."
authors = ["Valink Solutions"]
license = ""
repository = ""
default-run = "teller_desktop"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.183", features = ["derive"] }

tauri = { version = "1.4", features = [ "updater", "shell-all", "window-all", "dialog-all", "http-all", "fs-all"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

log = "0.4.19"
base64 = "0.21.2"
config = "0.13.3"
directories = "5.0.1"

uuid = { version = "1.4.1", features = ["v4", "serde"] }
tokio = { version = "1.30.0", features = ["full"] }
chrono = { version = "0.4.26", features = ["serde"] }

teller = { path = "../../teller" }
# commandblock = { version = "0.4.1", features = ["serde"] }
commandblock = { git = "https://github.com/Valink-Solutions/CommandBlock", features = ["serde"], branch = "add-bedrock-db-parsing" }
anyhow = "1.0.75"
reqwest = "0.11.21"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
